--- a/scripts/analysis/supplemental_tables.html
+++ b/scripts/analysis/supplemental_tables.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Natalie Saragosa-Harris" />
+<meta name="author" content="Anonymized" />
 
 
 <title>supplemental_tables.knit</title>
