--- a/scripts/analysis/supplemental_tables.html
+++ b/scripts/analysis/supplemental_tables.html
@@ -581,7 +581,7 @@ display: none;
 
 <h1 class="title toc-ignore"><div class="line-block"><br />
 Supplemental Tables and Figures</div></h1>
-<h4 class="author">Anonymized</h4>
+<h4 class="author">Natalie Saragosa-Harris</h4>
 <h4 class="date">October 2023</h4>
 
 </div>
